# potrait-ai-ml_interview-main

./: .gitignore  README.md  ml_interview-main.code-workspace  pyproject.toml
ml_interview/: word_splitter_bert.py  word_splitter_gpt.py
ml_interview/data/: 1983.csv  1984.csv  1985.csv  1986.csv  1987.csv  1988.csv  download_process_letters.py  download_process_letters_html.py
ml_interview/data/output/: 1983_bert_segmented.csv  1983_gpt_segmented.csv  1984_bert_segmented.csv  1984_gpt_segmented.csv  1985_bert_segmented.csv  1985_gpt_segmented.csv  1986_bert_segmented.csv  1986_gpt_segmented.csv  1987_bert_segmented.csv  1987_gpt_segmented.csv  1988_bert_segmented.csv  1988_gpt_segmented.csv
ml_interview/utils/: constants.py  text_similarity.py  text_utils.py
